add custom components for list and card functionality, enhance authentication demo page, and improve styles

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,14 @@
   cursor: pointer;
 }
 
+// fixed width
+
+@mixin fixed-width($width) {
+  width: $width;
+  min-width: $width;
+  max-width: $width;
+}
+
 // hide scrollbar
 
 // hide scrollbar for Chrome, Safari and Opera
