feat: add custom-fill-height class and custom-free-dialog component for improved layout

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,6 +29,13 @@
   }
 }
 
+// custom-fill-height
+
+.custom-fill-height {
+  height: 100% !important;
+  max-height: 100% !important;
+}
+
 // custom pagination
 
 .custom-pagination {
